@@ -319,6 +319,10 @@ $helpArray = array (
 					"Text" => _('Please enter your client id for the verification API.')),
 				"525" => array ("Headline" => _('Secret key'),
 					"Text" => _('Please enter your secret key for the verification API.')),
+				"526" => array ("Headline" => _('Login footer'),
+					"Text" => _('This text is displayed as footer on the self service login page.')),
+				"527" => array ("Headline" => _('Main page footer'),
+					"Text" => _('This text is displayed as footer on the self service main page.')),
 				"550" => array ("Headline" => _("From address"),
 					"Text" => _("This email address will be set as sender address of all password mails. If empty the system default (php.ini) will be used.")),
 				"551" => array ("Headline" => _("Subject"),
