@@ -1,5 +1,7 @@
 September 2019
   - Group account types can show member+owner count in list view
+  - LAM Pro:
+   -> New self service settings for login and main page footer
 
 
 02.07.2019 6.8
